# pi-monitor

./: .gitignore  Cargo.toml  LICENSE  README.md  Vagrantfile
monitoring/: grafana-dashboard.json
scripts/: build.sh  deploy.sh  monitoring-setup.sh
src/: main.rs
src/dashboard/: index.html  mod.rs  script.js  style.css
src/metrics/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  system.rs
src/server/: mod.rs  prometheus.rs  routes.rs
