[package]
name = "pi-monitor"
version = "0.1.0"
edition = "2024"
description = "Lightweight system monitoring agent for Raspberry Pi"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "server-auto"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.31", features = ["fs"] }


[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
